Fix user clock icon color

--- a/style.html
+++ b/style.html
@@ -70,7 +70,7 @@
             touch-action: none;
         }
         .fa-user-clock, .fas.fa-user-clock {
-            color: var(--primary-dark);
+            color: inherit;
         }
         /* Textura de cédula */
         body::before {
