--- a/style.html
+++ b/style.html
@@ -1170,18 +1170,23 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            padding: 8px 14px;
-            background: var(--surface-color);
-            border: 1px solid var(--border-color);
-            border-radius: 12px;
-            box-shadow: 0 8px 20px var(--shadow-color);
+            padding: 10px 16px;
+            background: linear-gradient(135deg, color-mix(in srgb, var(--primary-color) 8%, #ffffff 92%), #ffffff);
+            border: 1px solid color-mix(in srgb, var(--primary-color) 20%, var(--border-color) 80%);
+            border-radius: 999px;
+            box-shadow: 0 12px 30px color-mix(in srgb, var(--primary-color) 12%, var(--shadow-color) 88%);
             flex: 1 1 280px;
             max-width: 420px;
             min-width: 240px;
+            transition: all 0.25s ease;
         }
         .filter-search i {
             color: var(--muted-color);
             font-size: 1rem;
+            background: color-mix(in srgb, var(--primary-color) 12%, #f3f4f6 88%);
+            padding: 10px;
+            border-radius: 50%;
+            box-shadow: inset 0 1px 0 #ffffff, 0 6px 14px rgba(0, 0, 0, 0.08);
         }
         .filter-search input {
             border: none;
@@ -1192,8 +1197,9 @@
             color: var(--text-color);
         }
         .filter-search:focus-within {
-            border-color: var(--primary-color);
-            box-shadow: 0 0 0 4px var(--focus-ring);
+            border-color: color-mix(in srgb, var(--primary-color) 60%, transparent);
+            box-shadow: 0 0 0 6px var(--focus-ring), 0 14px 34px color-mix(in srgb, var(--primary-color) 16%, var(--shadow-color) 84%);
+            transform: translateY(-1px);
         }
         .contingencia-actions {
             display: flex;
