Revamp sidebar styling and responsiveness

--- a/style.html
+++ b/style.html
@@ -24,7 +24,12 @@
 
             /* Misc */
             --focus-ring: rgba(59, 130, 246, 0.25);
-            --sidebar-width: 250px;
+            --sidebar-width: 248px;
+            --sidebar-compact-width: 86px;
+            --sidebar-bg: #4c4b74;
+            --sidebar-bg-contrast: #4a4870;
+            --sidebar-highlight: #ff5d73;
+            --sidebar-accent: #5d5dff;
             --em-uso-base: #c6cacf;
             --em-uso-border-color: color-mix(in srgb, #c6cacf 70%, #000929 30%);
             --em-uso-card-bg: color-mix(in srgb, #c6cacf 92%, white 8%);
@@ -90,24 +95,44 @@
         /* Sidebar */
         .sidebar {
             width: var(--sidebar-width);
-            background: linear-gradient(180deg, #0e2f63, color-mix(in srgb, #010814 78%, #133f82));
+            background: linear-gradient(160deg, var(--sidebar-bg) 0%, #403f64 70%);
             color: white;
-            height: 100vh;
+            height: calc(100vh - 24px);
             position: fixed;
+            top: 12px;
+            left: 12px;
+            overflow: hidden;
             overflow-y: auto;
-            transition: all 0.3s;
+            transition: all 0.3s ease;
             z-index: 1000;
             display: flex;
             flex-direction: column;
+            border-radius: 22px;
+            box-shadow: 0 16px 40px rgba(0, 0, 0, 0.25);
+            padding: 18px 12px 16px;
+            isolation: isolate;
+        }
+        .sidebar::before {
+            content: "";
+            position: absolute;
+            inset: 18% 6px 10% 6px;
+            background: var(--sidebar-bg-contrast);
+            border-radius: 36px;
+            clip-path: path('M12 40 Q40 8 94 18 T210 50 Q260 70 250 120 T190 200 Q90 240 30 220 Q10 200 14 140 Z');
+            filter: drop-shadow(0 12px 30px rgba(0,0,0,0.25));
+            opacity: 0.75;
+            z-index: 0;
         }
         .sidebar-header {
-            padding: 24px 20px 20px;
+            padding: 12px 14px 18px;
             text-align: center;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
+            border-bottom: 1px solid rgba(255,255,255,0.08);
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 10px;
+            position: relative;
+            z-index: 1;
         }
         .sidebar-brand {
             display: flex;
@@ -121,80 +146,120 @@
             align-items: center;
             letter-spacing: 0.02em;
             font-size: 1.5rem;
-            font-weight: 400;
+            font-weight: 600;
             font-style: normal;
+            color: #e6e8ff;
         }
         .brand-text {
-            font-weight: 400;
+            font-weight: 600;
             font-style: normal;
             letter-spacing: 0.04em;
         }
         .brand-subtitle {
-            font-weight: 400;
+            font-weight: 500;
             font-style: normal;
-            font-size: 0.95rem;
-            color: color-mix(in srgb, var(--dark-color) 70%, var(--muted-color) 30%);
+            font-size: 0.9rem;
+            color: color-mix(in srgb, #e6e8ff 70%, rgba(255,255,255,0.65));
         }
         .sidebar-logo-icon {
-            width: 54px;
-            height: 54px;
-            border-radius: 16px;
+            width: 58px;
+            height: 58px;
+            border-radius: 18px;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: color-mix(in srgb, var(--light-color) 16%, transparent);
-            color: color-mix(in srgb, var(--light-color) 92%, var(--primary-dark) 8%);
-            font-size: 28px;
-            box-shadow: 0 10px 24px rgba(15, 23, 42, 0.15);
+            background: linear-gradient(135deg, var(--sidebar-highlight), var(--sidebar-accent));
+            color: #0b0b1a;
+            font-size: 30px;
+            box-shadow: 0 12px 28px rgba(0, 0, 0, 0.3);
         }
         .sidebar-title {
             font-size: 1.1rem;
-            font-weight: 400;
+            font-weight: 600;
             letter-spacing: 0.06em;
             text-transform: none;
         }
         .sidebar-header p {
-            font-size: 0.75rem;
-            opacity: 0.75;
+            font-size: 0.78rem;
+            opacity: 0.8;
             margin: 0;
             letter-spacing: 0.04em;
+            color: #d6d7f5;
         }
         .sidebar-menu {
-            padding: 15px 0;
+            padding: 16px 6px 10px;
             flex: 1;
+            position: relative;
+            z-index: 1;
         }
         .sidebar-menu ul {
             list-style: none;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            padding: 0 6px;
         }
         .sidebar-menu li {
             padding: 0;
         }
         .sidebar-menu a {
-            display: block;
-            padding: 12px 20px;
-            color: white;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 12px 14px;
+            color: #d6d7f5;
             text-decoration: none;
-            transition: all 0.3s;
-            border-left: 4px solid transparent;
+            transition: all 0.25s ease;
+            border-radius: 14px;
+            position: relative;
+            font-weight: 600;
+            line-height: 1.2;
+            background: rgba(255,255,255,0.04);
+            border: 1px solid rgba(255,255,255,0.06);
+        }
+        .sidebar-menu a::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border-radius: inherit;
+            background: linear-gradient(120deg, rgba(255,255,255,0.12), rgba(255,255,255,0.06));
+            opacity: 0;
+            transition: opacity 0.2s ease;
         }
         .sidebar-menu a:hover {
-            background-color: color-mix(in srgb, white 18%, transparent);
-            border-left-color: var(--light-color);
+            color: #fff;
+            transform: translateY(-1px);
+            box-shadow: 0 12px 26px rgba(0, 0, 0, 0.22);
+            border-color: rgba(255,255,255,0.14);
+        }
+        .sidebar-menu a:hover::before,
+        .sidebar-menu a.active::before {
+            opacity: 1;
         }
         .sidebar-menu a.active {
-            background-color: color-mix(in srgb, white 22%, transparent);
-            border-left-color: var(--light-color);
+            background: linear-gradient(135deg, rgba(255,255,255,0.18), rgba(255,255,255,0.06));
+            color: #fff;
+            border-color: rgba(255,255,255,0.18);
+            box-shadow: 0 12px 28px rgba(0, 0, 0, 0.24);
         }
         .sidebar-menu i {
-            margin-right: 10px;
-            width: 22px;
+            width: 24px;
             text-align: center;
-            font-size: 1.05rem;
+            font-size: 1.08rem;
+            color: #f2f3ff;
+            flex-shrink: 0;
+        }
+        .sidebar-menu span {
+            flex: 1;
+            min-width: 0;
+            color: inherit;
         }
         .sidebar-footer {
             margin-top: auto;
-            padding: 20px;
-            border-top: 1px solid rgba(255,255,255,0.1);
+            padding: 16px 14px 4px;
+            border-top: 1px solid rgba(255,255,255,0.08);
+            position: relative;
+            z-index: 1;
         }
         .sidebar-logout-button {
             width: 100%;
@@ -203,18 +268,19 @@
             justify-content: center;
             gap: 10px;
             padding: 12px 16px;
-            border-radius: 10px;
-            border: 1px solid rgba(255,255,255,0.2);
-            background: rgba(255,255,255,0.1);
-            color: white;
+            border-radius: 12px;
+            border: 1px solid rgba(255,255,255,0.16);
+            background: rgba(255,255,255,0.08);
+            color: #f6f7ff;
             font-size: 0.95rem;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease, border-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.2s ease, border-color 0.3s ease, box-shadow 0.2s ease;
         }
         .sidebar-logout-button:hover {
-            background: rgba(255,255,255,0.18);
-            border-color: rgba(255,255,255,0.35);
+            background: rgba(255,255,255,0.16);
+            border-color: rgba(255,255,255,0.26);
             transform: translateY(-1px);
+            box-shadow: 0 12px 20px rgba(0,0,0,0.2);
         }
         .sidebar-logout-button i {
             font-size: 1rem;
@@ -229,8 +295,8 @@
         }
         .main-content {
             flex: 1;
-            margin-left: var(--sidebar-width);
-            padding: 20px;
+            margin-left: calc(var(--sidebar-width) + 24px);
+            padding: 28px 28px 32px;
             transition: all 0.3s;
             overflow-x: hidden;
         }
@@ -3593,8 +3659,30 @@
                 min-height: 100vh;
             }
             .sidebar {
-                transform: translateX(-100%);
+                width: var(--sidebar-compact-width);
+                transform: translateX(-110%);
                 box-shadow: 0 10px 30px rgba(0,0,0,0.35);
+                padding: 14px 10px 12px;
+                top: 10px;
+                left: 10px;
+                height: calc(100vh - 20px);
+                border-radius: 18px;
+            }
+            .sidebar-header p,
+            .brand-name .brand-text,
+            .brand-subtitle,
+            .sidebar-menu span,
+            .sidebar-footer span {
+                display: none;
+            }
+            .sidebar-brand,
+            .sidebar-menu a,
+            .sidebar-logout-button {
+                justify-content: center;
+            }
+            .sidebar-menu a,
+            .sidebar-logout-button {
+                padding: 12px 10px;
             }
             .sidebar-backdrop {
                 position: fixed;
@@ -3615,6 +3703,9 @@
             }
             .app-shell.nav-open .sidebar {
                 transform: translateX(0);
+                width: min(260px, calc(100vw - 40px));
+                padding: 18px 14px 16px;
+                border-radius: 22px;
             }
             .app-shell.nav-open .sidebar-backdrop {
                 opacity: 1;
