--- a/style.html
+++ b/style.html
@@ -97,30 +97,30 @@
             width: var(--sidebar-width);
             background: linear-gradient(160deg, var(--sidebar-bg) 0%, #403f64 70%);
             color: white;
-            height: calc(100vh - 24px);
+            height: 100vh;
             position: fixed;
-            top: 12px;
-            left: 12px;
+            top: 0;
+            left: 0;
             overflow: hidden;
             overflow-y: auto;
             transition: all 0.3s ease;
             z-index: 1000;
             display: flex;
             flex-direction: column;
-            border-radius: 22px;
+            border-radius: 0 22px 22px 0;
             box-shadow: 0 16px 40px rgba(0, 0, 0, 0.25);
-            padding: 18px 12px 16px;
+            padding: 20px 14px 18px;
             isolation: isolate;
         }
         .sidebar::before {
             content: "";
             position: absolute;
-            inset: 18% 6px 10% 6px;
+            inset: 16% 6px 8% 6px;
             background: var(--sidebar-bg-contrast);
-            border-radius: 36px;
+            border-radius: 32px;
             clip-path: path('M12 40 Q40 8 94 18 T210 50 Q260 70 250 120 T190 200 Q90 240 30 220 Q10 200 14 140 Z');
-            filter: drop-shadow(0 12px 30px rgba(0,0,0,0.25));
-            opacity: 0.75;
+            filter: drop-shadow(0 10px 26px rgba(0,0,0,0.22));
+            opacity: 0.7;
             z-index: 0;
         }
         .sidebar-header {
@@ -295,7 +295,7 @@
         }
         .main-content {
             flex: 1;
-            margin-left: calc(var(--sidebar-width) + 24px);
+            margin-left: calc(var(--sidebar-width) + 20px);
             padding: 28px 28px 32px;
             transition: all 0.3s;
             overflow-x: hidden;
@@ -3662,11 +3662,15 @@
                 width: var(--sidebar-compact-width);
                 transform: translateX(-110%);
                 box-shadow: 0 10px 30px rgba(0,0,0,0.35);
-                padding: 14px 10px 12px;
-                top: 10px;
-                left: 10px;
-                height: calc(100vh - 20px);
-                border-radius: 18px;
+                padding: 16px 12px 14px;
+                top: 0;
+                left: 0;
+                height: 100vh;
+                border-radius: 0 18px 18px 0;
+                border: 1px solid rgba(255,255,255,0.06);
+            }
+            .sidebar::before {
+                display: none;
             }
             .sidebar-header p,
             .brand-name .brand-text,
@@ -3838,6 +3842,10 @@
                 left: 50%;
                 transform: translateX(-50%);
             }
+            .sidebar-menu a,
+            .sidebar-logout-button {
+                min-height: 52px;
+            }
             .header-quick-actions {
                 width: 100%;
                 justify-content: flex-end;
@@ -3867,14 +3875,15 @@
         }
         @media (max-width: 576px) {
             :root {
-                --sidebar-width: 72px;
+                --sidebar-width: 68px;
             }
             .sidebar {
                 width: var(--sidebar-width);
                 align-items: center;
+                padding: 14px 10px 12px;
             }
             .sidebar-header {
-                padding: 14px 10px;
+                padding: 12px 8px;
                 align-items: center;
             }
             .sidebar-title,
@@ -3885,17 +3894,17 @@
             }
             .sidebar-menu a {
                 justify-content: center;
-                padding: 14px 0;
+                padding: 12px 0;
                 border-left: none;
             }
             .sidebar-menu i {
                 margin-right: 0;
                 width: auto;
-                font-size: 1.2rem;
+                font-size: 1.05rem;
             }
             .sidebar-logout-button {
                 justify-content: center;
-                padding: 14px 0;
+                padding: 12px 0;
                 border: none;
                 gap: 0;
             }
